<resources>
    <string name="app_name">NorthcodersRecordShopApp</string>
    <string name="add_album">Add Album</string>
    <string name="stock">Stock</string>
    <string name="price">Price</string>
    <string name="release_year">Release Year</string>
    <string name="genre">Genre</string>
    <string name="artist_name">Artist Name</string>
    <string name="album_title">Album Title</string>
    <string name="back_to_main_activity">Back to Main Activity</string>
    <string name="back_to_main" />
    <string name="ic_add_album">Add New Album</string>
    <string name="update_album" />
    <string name="delete_album" />

    <string-array name="genre_array">
        <item>Select a Genre</item>
        <item>CLASSICAL</item>
        <item>JAZZ</item>
        <item>BLUES</item>
        <item>BOSSA_NOVA</item>
        <item>POP</item>
        <item>ROCK</item>
        <item>HIPHOP</item>
        <item>CHRISTMAS</item>
        <item>ELECTRONIC</item>
        <item>GOSPEL</item>
        <item>MPB</item>
        <item>REGGAE</item>
        <item>SAMBA</item>
    </string-array>
</resources>