<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    tools:context=".ui.addalbum.AddNewAlbumActivity">

    <data>
        <variable
            name="album"
            type="com.northcoders.northcodersrecordshopapp.model.Album" />

        <variable
            name="clickHandler"
            type="com.northcoders.northcodersrecordshopapp.ui.addalbum.AddAlbumClickHandlers" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/album_title"
            android:text="@={album.title}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editArtist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/artist_name"
            android:text="@={album.artist}"
            app:layout_constraintTop_toBottomOf="@id/editTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Spinner
            android:id="@+id/spinnerGenre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/genre"
            android:entries="@array/genre_array"
            app:layout_constraintTop_toBottomOf="@id/editArtist"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editReleaseYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/release_year"
            android:inputType="number"
            android:text="@={album.releaseYear}"
            app:layout_constraintTop_toBottomOf="@id/spinnerGenre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:text="@={album.price}"
            app:layout_constraintTop_toBottomOf="@id/editReleaseYear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editStock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/stock"
            android:inputType="number"
            android:text="@={album.stock}"
            app:layout_constraintTop_toBottomOf="@id/editPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/submitAlbumButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_album"
            android:onClick="@{clickHandler::onSubmitButtonClicked}"
            app:layout_constraintTop_toBottomOf="@id/editStock"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{clickHandler::onBackButtonClicked}"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/back_to_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@android:drawable/ic_menu_revert" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>